--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,21 @@
 [package]
-name = "embedded-rust-template"
+name = "ec_demo"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 license = "MIT"
-repository = "https://github.com/OpenDevicePartnership/embedded-rust-template"
+description = "RUST based UI to demo EC features"
+authors = ["Phil Weber <philweber@microsoft.com>"]
+repository = "https://github.com/OpenDevicePartnership/ec_demo"
 rust-version = "1.85"
 
 [dependencies]
 # dependencies for all targets
+crossterm = "0.28.1"
+ratatui = "0.29.0"
+color-eyre = "0.6.3"
+strum = { version = "0.27", default-features = false, features = ["derive"] }
 
-[target.'cfg(target_os = "none")'.dependencies]
+[target.'cfg(target_os = "aarch64-unknown-none")'.dependencies]
 # dependencies for no-std targets
 
 [lints.clippy]
